# vpn-switcher

./: .gitignore  LICENSE  README.md  TODO.md  config.yaml  example-config.yml  pyproject.toml  vpn-switcher.service  vpn-switcher.spec
.github/workflows/: python-package.yml  python-publish.yml
tests/: test_cli.py  test_daemon.py
vpn_switcher/: cli.py  daemon.py
