[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpn-switcher"
version = "0.1.0"
description = "Automatic VPN switcher for NetworkManager"
authors = [
  { name="Federico Manzella", email="ferdiu.manzella@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
  "PyYAML",
  "PyGObject",
  "requests",
  "dbus-python",
  "argcomplete",
]

[project.scripts]
vpn-switcher = "vpn_switcher.cli:main"
vpn-switcherd = "vpn_switcher.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["vpn_switcher"]
